--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -6,13 +6,6 @@
     width: max-content
 }
 
-.table__header {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
 .table__h2 {
     font-size: 1.2em;
     font-weight: var(--weightThin);
@@ -70,6 +63,13 @@ th {
     padding: 0.5em 0.8em  0.3em;
     font-weight: var(--weightNormal);
     background-color: var(--mediumGray);
+}
+
+.table__btns {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .btn--table {
