--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -5,7 +5,7 @@
     border-radius: var(--formFieldRadius);
     border-width: 0.2em;
     width: max-content;
-    padding: .2em 1em;
+    padding: .2em 0.5em;
     cursor: pointer;
     font-size: 0.7em;
     justify-self: center;
